--- a/index.html
+++ b/index.html
@@ -44,18 +44,18 @@
 
             <ul class="idgaul">
 
-                <li class="idgali"><a>DC</a>
+               <li class="idgali"><a>DC</a>
                     <ul class="idgaul">
-                        <li class="idgali"><a href="./Batman.html">Batman</a> </li>
-                        <li class="idgali"><a href="./superman.html">Superman</a></li>
-                        <li class="idgali"><a href="./ww.html">W W</a></li>
+                        <li class="idgali"><a href="./view/Batman.html">Batman</a> </li>
+                        <li class="idgali"><a href="./view/superman.html">Superman</a></li>
+                        <li class="idgali"><a href="./view/ww.html">W W</a></li>
                     </ul>
                 </li>
                 <li class="idgali"><a>Marvel</a>
                     <ul class="idgaul">
                         <li class="idgali"><a href="./Batman.html">C America</a> </li>
-                        <li class="idgali"><a href="">Spyderman</a></li>
-                        <li class="idgali"><a href="">X-man</a></li>
+                        <li class="idgali"><a href="">Spiderman</a></li>
+                        <li class="idgali"><a href="">X-men</a></li>
                     </ul>
                 </li>
                 <li class="idgali"><a>Gallery</a>
